# type_sec

./: CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  SPEC-tests-map.md  TODO Arbeitsplan.txt  TODO.txt  rust-toolchain.toml
.github/: pr_temp.md
.github/workflows/: ci.yml
crates/bug_injection/: Cargo.toml
crates/bug_injection/src/: lib.rs
crates/hpc-core/: Cargo.toml  README.md  README_legacy.md  SPEC-tests-map.md  SPEC.md  build.rs
crates/hpc-core/benches/: hello_bench.rs  memcpy_api_criterion.rs  ocl_events.rs  ocl_mem.rs  ocl_vecadd.rs  stencil_bench.rs  vec_add_bench.rs
crates/hpc-core/examples/: abort_token.rs  bandwidth_basic.rs  bandwidth_optimized.rs  bandwidth_wrapper.rs  bloat_target.rs  bloat_target_opencl.rs  myex.rs  pipeline_typestate.rs  simple_vector_add.rs  stencil.cl  stencil.rs  stencil_raw.rs  stencil_valid.rs  tail_metrics.rs  vec_add.cl  vec_add.rs  vec_add_overlap.rs  vec_add_raw.rs  vec_add_serial.rs  write_metrics.rs
crates/hpc-core/results/2025-08-17/: run.jsonl
crates/hpc-core/src/: api.rs  error.rs  event_token.rs  lib.rs  read_guard.rs
crates/hpc-core/src/api/: functions.rs  mod.rs
crates/hpc-core/src/api/device_buffer/: empty.rs  inflight.rs  mapped.rs  mod.rs
crates/hpc-core/src/api/device_buffer/ready/: mod.rs
crates/hpc-core/src/api/device_buffer/ready/io/: mod.rs  read.rs  write.rs
crates/hpc-core/src/api/device_buffer/written/: mod.rs
crates/hpc-core/src/api/device_buffer/written/io/: mod.rs  read.rs  write.rs
crates/hpc-core/src/api/opencl/: context.rs  kernel.rs  mod.rs  queue.rs
crates/hpc-core/src/api/util/: event_token.rs  map_token.rs  mod.rs  read_guard.rs
crates/hpc-core/src/buffer/: empty.rs  gpu_guard.rs  guard.rs  inflight.rs  map_guard.rs  mapped.rs  mod.rs  ready.rs  state.rs  written.rs
crates/hpc-core/src/memtracer/: aborttoken.rs  copytoken.rs  mod.rs
crates/hpc-core/src/metrics/: mod.rs  recorder.rs  run_id.rs  schema.rs
crates/hpc-core/tests/: api_smoke  api_typestate.rs  compile_fail.rs  happy_paths.rs  main.rs  metrics_concurrency.rs  metrics_determinism.rs  metrics_log_smoke.rs  metrics_rotation.rs  metrics_schema.rs  simple_vector_add.rs  state.rs  state_miri.rs  try_spec.rs
crates/hpc-core/tests/compile-fail/: api_cross_ctx.rs  api_cross_ctx.stderr  api_double_wait.rs  api_double_wait.stderr  api_double_write.rs  api_double_write.stderr  api_inflight_read.rs  api_inflight_read.stderr  api_inflight_write.rs  api_inflight_write.stderr  api_invalid_size.rs  api_invalid_size.stderr  api_kernel_on_empty.rs  api_kernel_on_empty.stderr  api_leak.rs  api_leak.stderr  api_misc.rs  api_misc.stderr  api_miss_wait.rs  api_miss_wait.stderr  api_order.rs  api_order.stderr  api_wait_on_ready.rs  api_wait_on_ready.stderr  ready_cannot_wait.rs  ready_cannot_wait.stderr
crates/hpc-core/tests/compile-pass/: api_happy_path.rs
crates/hpc-core/tests/compile_fail/: api_cross_context  api_cross_context.stderr  api_empty_kernel.rs  api_empty_kernel.stderr  api_empty_lernel.rs  api_empty_lernel.stderr  api_forget_unmap.rs  api_forget_unmap.stderr  api_forget_wait.rs  api_forget_wait.stderr  api_inflight_map.rs  api_inflight_map.stderr  api_inflight_read.rs  api_inflight_read.stderr  api_inflight_write.rs  api_inflight_write.stderr  api_no_event_use.rs  api_no_event_use.stderr  api_wait_on_ready.rs  api_wait_on_ready.stderr  api_wait_on_written.rs  api_wait_on_written.stderr  api_wouble_wait.rs  api_wouble_wait.stderr  api_wrong_arg.rs  api_wrong_arg.stderr
docs/: api_audit.md  bloat_baseline.txt  cross_mapping.md  related_work.md  reproduce.md  session_types.md  zero_corst.md  zero_cost.md
paper/: eps-method.md  evaluation.md  methods.md  positioning.md  related-work.md
results/2025-08-02/: final_geiger.txt  final_miri.txt
results/2025-08-02/memtrace results/: memtrace_1024.csv  memtrace_16386.csv  memtrace_32770.csv  memtrace_8194.csv  memtrace_raw_1024.csv  memtrace_raw_16386.csv  memtrace_raw_32770.csv  memtrace_raw_8194.csv
results/2025-08-02/stencil results/: stencil_results1026.csv  stencil_results16386.csv  stencil_results32770.csv  stencil_results8194.csv
results/2025-08-15/: run.jsonl
results/2025-08-17/: run.jsonl
results/2025-08-18/: env.txt  notes_governor.txt
results/2025-08-21/asm/: api_opencl_context_create_context.txt  api_opencl_kernel_from_source.txt  (+2 more)
results/_today/: run.jsonl
scripts/: bench_capture.sh  bench_setup.sh  benchmark_cleanup.sh  benchmark_setup.sh  cuda_benchmark.cu  opencl_benchmark.c  parse_criterion.py  run_bench.sh
(+945 files in other folders)
