[workspace]
members = [
    "crates/hpc-core"]
resolver = "2" 

[profile.release]
codegen-units = 1
lto = "thin"


#[profile.release]
#codegen-units = 1
#lto = "thin"
#debug = false     # für bloat ok; für asm-Spotchecks später ggf. true
#strip = "symbols" # (ab Rust 1.80) kleinere Binaries
#panic = "abort"   # weniger Backtrace-/Unwind-Ballast
