[workspace]
members = [
    "crates/hpc-core"]
resolver = "2" 



#[profile.release]
#codegen-units = 1
#lto = "thin"
#debug = false     # für bloat ok; für asm-Spotchecks später ggf. true
#strip = "symbols" # (ab Rust 1.80) kleinere Binaries
#panic = "abort"   # weniger Backtrace-/Unwind-Ballast

[profile.bench]
opt-level = 3           # Maximale Optimierung (Standard)
debug = false           # Keine Debug-Symbole
lto = true              # Link-Time Optimization
codegen-units = 1       # Bessere Optimierung, langsamere Kompilierung
panic = "abort"         # Kleinere Binaries