[package]
name = "hpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1"
opencl3 = "0.7"
thiserror = "1"
bytemuck  = "1.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fastrand  = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
fs2 = "0.4"
hostname = "0.3"
jsonschema = "0.17"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
serde_json = "1"



[[bench]]
name = "vec_add_bench"
harness = false

[[bench]]
name = "stencil_bench"
harness = false




[features]
default = []
metrics = []
memtrace = []
api-dev = [] 

[[example]]
name = "bandwidth_basic"
path = "examples/bandwidth_basic.rs"

[[example]]
name = "bandwidth_optimized" 
path = "examples/bandwidth_optimized.rs"


[[example]]
name = "write_metrics"
path = "examples/write_metrics.rs"
required-features = ["metrics"]

# (du hast schon)
[[example]]
name = "tail_metrics"
path = "examples/tail_metrics.rs"
required-features = ["metrics"]
