[package]
name = "hpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
opencl3   = "0.7"
thiserror = "1"
bytemuck  = "1.14"
serde     = { version = "1", features = ["derive"] }

# bleiben vorerst „normal“, wenn du nicht featurisieren willst:
serde_json = "1"
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
time       = { version = "0.3", features = ["formatting", "macros"] }
once_cell  = "1"
fastrand   = "2"
fs2        = "0.4"
hostname   = "0.3"
jsonschema = "0.17"
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
trybuild   = "1.0"
regex      = "1"

[[bin]]
name = "metrics_tail"
path = "src/bin/metrics_tail.rs"
required-features = ["metrics"]

[[bin]]
name = "metrics_summary"
path = "src/bin/metrics_summary.rs"
required-features = ["metrics"]

[[bench]]
name = "stencil_bench"
harness = false

[features]
default = []
metrics = []
memtrace = []
api-dev = [] 

# Beispiele: nur die, die wir wirklich wollen
[[example]]
name = "bandwidth_optimized"
path = "examples/bandwidth_optimized.rs"

[[example]]
name = "write_metrics"
path = "examples/write_metrics.rs"
required-features = ["metrics"]
