[package]
name = "hpc-core"
version = "0.1.0"
edition = "2024"
authors = ["Tihomir Thomas Bicanic"]
description = "High-performance type-safe Rust API for OpenCL (Type-States, Metrics, Memtracer)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheBuccaneer/hpc-core"

[dependencies]
# OpenCL-Bindings
opencl3 = "0.7"
thiserror = "1.0"
once_cell = "1.17"

# Hilfen für Zero-Cost Casts (z.B. &[T] <-> &[u8])
bytemuck = { version = "1.15", features = ["derive"] }

# Für Logs / JSONL im Memtracer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Für Compile-Fail-Belege
trybuild = "1.0"
criterion = "0.5"

[features]
# Entwicklungsmodus (schaltet ggf. unimplemented! frei)
hpc_core_dev = []
memtracer = []
metrics = []


[lib]
name = "hpc_core"
path = "src/lib.rs"


[[bench]]
name = "memcpy_api_criterion"
harness = false
